# fluenti

./: CMakeLists.txt  README.md  build.sh  main.c  main.cpp  run.sh
algorithm/help_generator/: help_generator.cpp  help_generator.h
algorithm/padding/: padding.cpp  padding.h
algorithm/space_formatter/: space_formatter.h
algorithm/starts_with/: starts_with.c  starts_with.h
ansi/: ansi.h
cli/: argv_impl.c  argv_impl.cpp  argv_impl.h
cli/default/: get_flags.c  get_flags.cpp  get_flags.h
cli/flag/: flag.h  flag_type.h
core/: core.c  core.cpp  core.h
core/engine/: engine.cpp  engine.h
core/lazy/: ref.cpp  ref.h
core/object/: object.cpp  object.h
core/rule/block/: block.cpp  block.h
core/rule/call/: call.cpp  call.h
core/rule/expr/: expr.cpp  expr.h
core/rule/function/: function.cpp  function.h
core/runtime/execution/: execution_pair.h
core/runtime/scope/: scope.h
core/std/: stdlib_map.cpp  stdlib_map.h
file_code/: file_code.cpp  file_code.h
file_code/rule/function/: function.cpp  function.h
file_code/rule/mod/: mod.cpp  mod.h
file_code/rule/ref/: ref.cpp  ref.h
file_code/rule/type/: type.cpp  type.h
file_code/structure/function/: function.h
file_code/structure/mod/: mod.h
file_code/structure/ref/: ref.h
file_code/type/: type_wrapper.h
heap/: heap_alloc.c  heap_alloc.h  heap_guard.cpp  heap_guard.h
lexer/: lexer.cpp  lexer.h  token.cpp  token.h
logger/: logger.c  logger.h
object/: fluent_object.c  fluent_object.h  fluent_struct.c  fluent_struct.h  object_type.c  object_type.h  primitive_type.h
parser/: parser.cpp  parser.h
parser/rule/arithmetic/: arithmetic.cpp  arithmetic.h
parser/rule/binary/: binary.cpp  binary.h
parser/rule/block/: block.cpp  block.h
parser/rule/expr/: expr.cpp  expr.h
parser/rule/function/: function.cpp  function.h
parser/rule/identifier/: identifier.cpp  identifier.h
parser/rule/if/: if.cpp  if.h
parser/rule/link/: link.cpp  link.h
parser/rule/module/: module.cpp  module.h
parser/rule/pick/: pick.cpp  pick.h
parser/rule/prop/: prop.cpp  prop.h
parser/rule/ranged/: ranged.cpp  ranged.h
parser/rule/reference/: reference.cpp  reference.h
parser/rule/ret/: ret.cpp  ret.h
parser/rule/type/: type.cpp  type.h
parser/rule/var/: var.cpp  var.h
runtime/: init_runtime.c  init_runtime.h
runtime/object/: string.c  string.h
runtime/panic/: panic.h
runtime/print/: print.c  print.h
runtime/read_line/: read_line.c  read_line.h  win_read_line.c  win_read_line.h
shared/: on_hash_map_destroy.c  on_hash_map_destroy.h
std/: std.cpp  std.h
std_c/: runtime.c  runtime.h
std_c/print/: print.c  print.h
structure/hash_map/: hash_map.c  hash_map.h
structure/immut_str/: immut_str.cpp
structure/linked_queue/: linked_queue.h
structure/mutex/: mutex.c  mutex.h
structure/string_builder/: string_builder.c  string_builder.h
types/: bool.h  int.h
util/: assert.h  unwrap.h
util/help_generator/: help_generator.c  help_generator.h
util/read_file/: read_file.c  read_file.h
util/space_formatter/: space_formatter.c
